# deep-research-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.claude-plugin/: plugin.json
agents/: deep-research-agent.md  grounded-researcher.md
scripts/: check_quotes.py  scrape.py  search.py  to_pdf.py
src/deep_research/: __init__.py  __main__.py  config.py  llm.py  pdf.py  pipeline.py  web.py
